--- a/app/src/main/res/layout/item_projects_default.xml
+++ b/app/src/main/res/layout/item_projects_default.xml
@@ -5,131 +5,59 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="10dp"
-    android:background="@drawable/shape_rectangle">
+    >
 
     <ImageView
         android:id="@+id/folder_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_file_yellow"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/completed_image_view"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:src="@drawable/ic_completed"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintTop_toTopOf="@id/folder_image_view"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/completed_size_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textColor="#00bd06"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintEnd_toStartOf="@id/completed_image_view"
-        app:layout_constraintTop_toTopOf="@id/completed_image_view"
-        app:layout_constraintBottom_toBottomOf="@id/completed_image_view"
-        tools:text="12"/>
-
-    <ImageView
-        android:id="@+id/progress_image_view"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:src="@drawable/ic_progress"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/completed_image_view"
-        app:layout_constraintEnd_toEndOf="@id/completed_image_view" />
-
-    <TextView
-        android:id="@+id/progress_size_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textColor="#ff0000"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintEnd_toStartOf="@id/progress_image_view"
-        app:layout_constraintTop_toTopOf="@id/progress_image_view"
-        app:layout_constraintBottom_toBottomOf="@id/progress_image_view"
-        tools:text="13"/>
-
-    <ImageView
-        android:id="@+id/thought_image_view"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_thought"
-        app:layout_constraintEnd_toEndOf="@id/progress_image_view"
-        app:layout_constraintTop_toBottomOf="@id/progress_image_view"/>
-
-    <TextView
-        android:id="@+id/thought_size_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textColor="#ffe700"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintEnd_toStartOf="@id/thought_image_view"
-        app:layout_constraintTop_toTopOf="@id/thought_image_view"
-        app:layout_constraintBottom_toBottomOf="@id/thought_image_view"
-        tools:text="14"/>
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/vertical_barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="start"
-        app:constraint_referenced_ids="completed_size_text_view,
-        progress_size_text_view, thought_size_text_view"/>
 
     <TextView
         android:id="@+id/project_name_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:maxLength="17"
+        android:textSize="20sp"
+        android:maxEms="17"
         android:ellipsize="end"
+        android:maxLines="1"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/folder_image_view"
         app:layout_constraintStart_toEndOf="@id/folder_image_view"
-        app:layout_constraintEnd_toStartOf="@id/vertical_barrier"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text = "Проект \n dsfsd \n sdfdsf"/>
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/folder_name_barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="folder_image_view,
-        project_name_text_view, thought_image_view"
+        app:constraint_referenced_ids="folder_image_view, folder_name_barrier"
         app:barrierDirection="bottom"/>
-
-    <ImageView
-        android:id="@+id/update_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_refresh_black"
-        app:layout_constraintTop_toBottomOf="@id/folder_name_barrier"
-        app:layout_constraintStart_toStartOf="@id/folder_image_view"
-        />
 
     <TextView
         android:id="@+id/update_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="12sp"
-        android:textColor="#c3c3c3"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toEndOf="@id/update_image_view"
+        android:textColor="#B1A6A6"
+        app:layout_constraintStart_toStartOf="@id/project_name_text_view"
         app:layout_constraintEnd_toEndOf="@id/project_name_text_view"
-        app:layout_constraintTop_toTopOf="@id/update_image_view"
-        app:layout_constraintBottom_toBottomOf="@id/update_image_view"
+        app:layout_constraintTop_toBottomOf="@id/project_name_text_view"
         tools:text="33.13.2013"/>
+
+    <com.example.projectstages.ColorsProgressBar
+        android:id="@+id/custom_progress_bar"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/folder_image_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
