--- a/app/src/main/res/layout/fragment_tasks_list.xml
+++ b/app/src/main/res/layout/fragment_tasks_list.xml
@@ -19,6 +19,22 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <TextView
+        android:id="@+id/error_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_red_dark"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="Ошибка получения списка задач"
+        tools:visibility="visible"
+        />
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
