--- a/app/src/main/res/layout/item_projects_default.xml
+++ b/app/src/main/res/layout/item_projects_default.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@id/project_name_text_view"
         tools:text="33.13.2013"/>
 
-    <com.example.projectstages.ColorsProgressBar
+    <com.example.projectstages.customview.ColorsProgressBar
         android:id="@+id/custom_progress_bar"
         android:layout_width="0dp"
         android:layout_height="20dp"
