- добавил подложку со скругленными углами

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
     <color name="bright_red">#D80808</color>
     <color name="bright_green">#149518</color>
     <color name="bright_yellow">#ECD609</color>
+    <color name="pail_blue">#F9FBFF</color>
 </resources>
