--- a/app/src/main/res/layout/toolbar_projects.xml
+++ b/app/src/main/res/layout/toolbar_projects.xml
@@ -3,19 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
+    android:layout_height="wrap_content"
     android:background="@color/purple_700"
     android:elevation="4dp"
-    app:title="ProjectsStages"
-    app:subtitle="Список проектов"
     app:titleTextColor="@android:color/white"
     app:subtitleTextColor="@android:color/white">
+        
+        <TextView
+            android:id="@+id/project_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Проекты"
+            android:textColor="@color/white"
+            android:textStyle="italic"/>
 
-    <ImageView
-        android:id="@+id/add_question_menu_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_add"
-        android:layout_gravity="end"
-        android:layout_marginEnd="15dp" />
 </androidx.appcompat.widget.Toolbar>
