--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -7,13 +7,6 @@
     android:background="@color/pale_blue"
     tools:context=".ui.projects.ProjectsFragment">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar_projects"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <View
         android:id="@+id/placeholder_view"
         android:layout_width="0dp"
@@ -21,7 +14,7 @@
         android:background="@drawable/shape_rectangle_rounded_bottom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <View
         android:id="@+id/vertical_separator_view"
@@ -76,7 +69,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Добавить проект"
+        android:text="Add project"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
