--- a/app/src/main/res/layout/item_projects_default.xml
+++ b/app/src/main/res/layout/item_projects_default.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/folder_image_view"
@@ -31,8 +30,8 @@
         android:layout_marginEnd="10dp"
         app:layout_constraintTop_toTopOf="@id/folder_image_view"
         app:layout_constraintStart_toEndOf="@id/folder_image_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text = "Проект \n dsfsd \n sdfdsf"/>
+        app:layout_constraintEnd_toStartOf="@id/menu_image_view"
+        tools:text = "Проект dsfsd sdfdsfsdfsdsdfsdsdfds sdfsd"/>
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/folder_name_barrier"
@@ -51,6 +50,15 @@
         app:layout_constraintEnd_toEndOf="@id/project_name_text_view"
         app:layout_constraintTop_toBottomOf="@id/project_name_text_view"
         tools:text="33.13.2013"/>
+
+    <ImageView
+        android:id="@+id/menu_image_view"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:src="@drawable/ic_menu_item"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/folder_image_view"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.example.projectstages.customview.ColorsProgressBar
         android:id="@+id/custom_progress_bar"
