--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -11,10 +11,12 @@
         android:id="@+id/placeholder_view"
         android:layout_width="0dp"
         android:layout_height="120dp"
+        android:visibility="invisible"
         android:background="@drawable/shape_rectangle_rounded_bottom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"/>
 
     <View
         android:id="@+id/vertical_separator_view"
@@ -22,10 +24,11 @@
         android:layout_height="50dp"
         android:background="@android:color/white"
         android:layout_marginTop="16dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/placeholder_view"
-        />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/all_tasks_text_view"
@@ -34,10 +37,11 @@
         android:text="20 \nAll tasks"
         android:textColor="@android:color/white"
         android:layout_marginEnd="16dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@id/vertical_separator_view"
         app:layout_constraintBottom_toBottomOf="@id/vertical_separator_view"
         app:layout_constraintTop_toTopOf="@id/vertical_separator_view"
-        />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/completed_tasks_text_view"
@@ -45,10 +49,12 @@
         android:layout_height="wrap_content"
         android:text="10 \nCompleted tasks"
         android:layout_marginStart="16dp"
+        android:visibility="invisible"
         android:textColor="@color/pale_less_green"
         app:layout_constraintStart_toEndOf="@id/vertical_separator_view"
         app:layout_constraintTop_toTopOf="@id/vertical_separator_view"
-        app:layout_constraintBottom_toBottomOf="@id/vertical_separator_view"/>
+        app:layout_constraintBottom_toBottomOf="@id/vertical_separator_view"
+        tools:visibility="visible"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -56,11 +62,13 @@
         android:layout_height="0dp"
         android:background="@drawable/shape_rectangle_rounded_corners"
         android:layout_margin="16dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/vertical_separator_view"
         app:layout_constraintBottom_toTopOf="@id/add_project_button"
-        tools:listitem="@layout/item_projects_default"/>
+        tools:listitem="@layout/item_projects_default"
+        tools:visibility="visible"/>
 
     <Button
         android:id="@+id/add_project_button"
@@ -81,6 +89,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/error_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Ошибка. Не удалось загрузить список проектов"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textColor="@color/red"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
