--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -10,9 +10,9 @@
     <View
         android:id="@+id/placeholder_view"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:visibility="invisible"
-        android:background="@drawable/shape_rectangle_rounded_bottom"
+        android:background="@drawable/shape_rectangle_rounded_bottom_left"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,9 +25,11 @@
         android:background="@android:color/white"
         android:layout_marginTop="16dp"
         android:visibility="invisible"
+        android:layout_marginBottom="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/placeholder_view"
+        app:layout_constraintBottom_toTopOf="@id/recycler_view"
+        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
     <TextView
@@ -56,16 +58,19 @@
         app:layout_constraintBottom_toBottomOf="@id/vertical_separator_view"
         tools:visibility="visible"/>
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/shape_rectangle_rounded_corners"
-        android:layout_margin="16dp"
         android:visibility="invisible"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="90dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vertical_separator_view"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/add_project_button"
         tools:listitem="@layout/item_projects_default"
         tools:visibility="visible"/>
