--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -6,9 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.task.TaskFragment">
 
-<!--    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar_with_bucket" />-->
+    <View
+        android:id="@+id/placeholder_view"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:visibility="visible"
+        android:background="@drawable/shape_rectangle_rounded_bottom_right"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"/>
 
     <Spinner
         android:id="@+id/state_spinner"
@@ -17,13 +24,13 @@
         android:visibility="gone"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
         android:spinnerMode="dropdown"
         tools:listitem="@layout/item_spinner_with_text"
         android:background="@drawable/shape_outline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/description_text_input_layout"
         tools:visibility="visible"/>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -31,20 +38,20 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
-        style="@style/MyTextInputLayout"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="90dp"
         app:layout_constraintEnd_toEndOf="@id/state_spinner"
         app:layout_constraintStart_toStartOf="@id/state_spinner"
-        app:layout_constraintTop_toBottomOf="@id/state_spinner"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/save_button"
+        app:counterEnabled="true"
+        app:counterMaxLength="250"
         tools:visibility="visible">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/description_text_input_edit_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@style/MyTextInputEditText"
             android:gravity="top"
             android:inputType="textMultiLine"/>
 
@@ -54,7 +61,7 @@
         android:id="@+id/save_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="сохранить"
+        android:text="save"
         android:visibility="gone"
         android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="@id/description_text_input_layout"
