--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,9 +17,15 @@
     <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:textColorHint">@color/purple_700</item>
         <item name="boxStrokeColor">@color/purple_500</item>
+<!--        <item name="colorOnBackground">@color/white</item>-->
+        <item name="android:background">@android:color/white</item>
+
     </style>
 
     <style name="MyTextInputEditText" parent="ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense">
         <item name="android:textColor">@android:color/black</item>
+<!--        <item name="android:radius">20dp</item>-->
+<!--        <item name="android:background">@color/white</item>-->
+        <item name="android:colorBackground">@color/white</item>
     </style>
 </resources>
