--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -83,9 +83,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="Add project"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="visible"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
