--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -11,7 +11,7 @@
         android:id="@+id/placeholder_view"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:background="@drawable/shape_rectangle_not_rounded"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,17 +30,19 @@
         android:maxLines="1"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="sdfsdsgfsdgsgsdgssdggsdgsdgs \n sdfssdfsdf"/>
+        tools:text="sdfsdsgfsdgsgsdgssdggsdgsdgs \n sdfssdfsdf"
+        tools:visibility="visible"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:background="@drawable/shape_rectangle_rounded_corners"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -60,9 +62,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="add task"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="visible"/>
 
     <TextView
         android:id="@+id/error_text_view"
