--- a/app/src/main/res/drawable/ic_delete.xml
+++ b/app/src/main/res/drawable/ic_delete.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2L18,7L6,7v12zM8.46,11.88l1.41,-1.41L12,12.59l2.12,-2.12 1.41,1.41L13.41,14l2.12,2.12 -1.41,1.41L12,15.41l-2.12,2.12 -1.41,-1.41L10.59,14l-2.13,-2.12zM15.5,4l-1,-1h-5l-1,1L5,4v2h14L19,4z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#f44336" android:pathData="m453.332,0h-394.664c-32.363,0 -58.668,26.305 -58.668,58.668v394.664c0,32.363 26.305,58.668 58.668,58.668h394.664c32.363,0 58.668,-26.305 58.668,-58.668v-394.664c0,-32.363 -26.305,-58.668 -58.668,-58.668zM453.332,0"/>
+    <path android:fillColor="#fafafa" android:pathData="m350.273,320.105c8.34,8.344 8.34,21.848 0,30.168 -4.16,4.16 -9.621,6.25 -15.086,6.25 -5.461,0 -10.922,-2.09 -15.082,-6.25l-64.105,-64.109 -64.105,64.109c-4.16,4.16 -9.621,6.25 -15.082,6.25 -5.465,0 -10.926,-2.09 -15.086,-6.25 -8.34,-8.32 -8.34,-21.824 0,-30.168l64.109,-64.105 -64.109,-64.105c-8.34,-8.344 -8.34,-21.848 0,-30.168 8.344,-8.34 21.824,-8.34 30.168,0l64.105,64.109 64.105,-64.109c8.344,-8.34 21.824,-8.34 30.168,0 8.34,8.32 8.34,21.824 0,30.168l-64.109,64.105zM350.273,320.105"/>
 </vector>
