--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toStartOf="@id/delete_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/description_text_input_layout"
+        app:layout_constraintBottom_toTopOf="@id/description_edit_text"
         tools:visibility="visible"/>
 
     <ImageView
@@ -41,36 +41,26 @@
         android:src="@drawable/ic_delete"
         app:layout_constraintTop_toTopOf="@id/state_spinner"
         app:layout_constraintBottom_toBottomOf="@id/state_spinner"
-        app:layout_constraintEnd_toEndOf="@id/description_text_input_layout"/>
+        app:layout_constraintEnd_toEndOf="@id/description_edit_text"/>
 
-    <!--
-    //TODO("Задать нормальный стиль EditText")
-    -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/description_text_input_layout"
+    <EditText
+        android:id="@+id/description_edit_text"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"
-        android:layout_marginBottom="16dp"
+        android:gravity="top"
+        android:inputType="textMultiLine"
         android:layout_marginTop="90dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="16dp"
+        android:maxLength="300"
+        android:background="@drawable/selector_edit_text"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/save_button"
-        app:counterEnabled="true"
-        app:counterMaxLength="250"
-        tools:visibility="visible">
+        app:layout_constraintBottom_toTopOf="@id/save_button"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/description_text_input_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="top"
-            android:inputType="textMultiLine"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/save_button"
@@ -79,8 +69,8 @@
         android:text="save"
         android:visibility="gone"
         android:layout_marginBottom="16dp"
-        app:layout_constraintEnd_toEndOf="@id/description_text_input_layout"
-        app:layout_constraintStart_toStartOf="@id/description_text_input_layout"
+        app:layout_constraintEnd_toEndOf="@id/description_edit_text"
+        app:layout_constraintStart_toStartOf="@id/description_edit_text"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="visible"/>
 
