--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -26,6 +26,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="20dp"
         android:spinnerMode="dropdown"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         tools:listitem="@layout/item_spinner_with_text"
         android:background="@drawable/shape_outline"
         app:layout_constraintEnd_toStartOf="@id/delete_button"
