- доделал все экраны на Hilt

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -43,5 +43,18 @@
         android:id="@+id/taskFragment"
         android:name="com.example.projectstages.ui.task.TaskFragment"
         android:label="fragment_task"
-        tools:layout="@layout/fragment_task" />
+        tools:layout="@layout/fragment_task" >
+        <argument
+            android:name="isEdit"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <argument
+            android:name="projectID"
+            app:argType="long"
+            android:defaultValue="0L" />
+        <argument
+            android:name="taskID"
+            app:argType="long"
+            android:defaultValue="0L" />
+    </fragment>
 </navigation>
