--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,4 +37,5 @@
     <color name="pale_less_green">#30FF30</color>
 
     <color name="silver_color">#C0C0C0</color>
+    <color name="mate_blue">#6A5ACD</color>
 </resources>
