--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/placeholder_view"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/height_top_view"
         android:visibility="invisible"
         android:background="@drawable/shape_rectangle_rounded_bottom_left"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,11 +21,11 @@
     <View
         android:id="@+id/vertical_separator_view"
         android:layout_width="1dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@android:color/white"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/margin_default"
         android:visibility="invisible"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@dimen/margin_default"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/recycler_view"
@@ -37,8 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="20 \nAll tasks"
-        android:textColor="@android:color/white"
-        android:layout_marginEnd="16dp"
+        android:textSize="12sp"
+        android:textColor="@color/mate_blue"
+        android:layout_marginEnd="@dimen/margin_default"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@id/vertical_separator_view"
         app:layout_constraintBottom_toBottomOf="@id/vertical_separator_view"
@@ -50,7 +51,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10 \nCompleted tasks"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_default"
+        android:textSize="12sp"
         android:visibility="invisible"
         android:textColor="@color/pale_less_green"
         app:layout_constraintStart_toEndOf="@id/vertical_separator_view"
@@ -65,10 +67,10 @@
         android:layout_height="0dp"
         android:background="@drawable/shape_rectangle_rounded_corners"
         android:visibility="invisible"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
+        android:layout_marginTop="@dimen/margin_top_recycler_or_edit_text"
+        android:layout_marginBottom="@dimen/margin_default"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -80,9 +82,9 @@
         android:id="@+id/add_project_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="@dimen/margin_default"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
         android:text="Add project"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,8 +106,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Ошибка. Не удалось загрузить список проектов"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
         android:textSize="20sp"
         android:textAlignment="center"
         android:textColor="@color/red"
