--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/placeholder_view"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/height_top_view"
         android:visibility="visible"
         android:background="@drawable/shape_rectangle_rounded_bottom_right"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
         android:layout_height="0dp"
         android:gravity="top"
         android:inputType="textMultiLine"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="@dimen/margin_top_recycler_or_edit_text"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
