--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/placeholder_view"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/height_top_view"
         android:visibility="invisible"
         android:background="@drawable/shape_rectangle_not_rounded"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,8 +22,8 @@
         android:id="@+id/project_name_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:ellipsize="end"
@@ -44,10 +44,10 @@
         android:layout_height="0dp"
         android:visibility="invisible"
         android:background="@drawable/shape_rectangle_rounded_corners"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
+        android:layout_marginTop="@dimen/margin_top_recycler_or_edit_text"
+        android:layout_marginBottom="@dimen/margin_default"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -59,9 +59,9 @@
         android:id="@+id/add_task_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="@dimen/margin_default"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginEnd="@dimen/margin_default"
         android:text="add task"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
